--- a/Practica/.project
+++ b/Practica/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Punto</name>
+	<name>Practica</name>
 	<comment></comment>
 	<projects>
 	</projects>
